# personal-cloud-storage

./: .gitignore
GFotosApp/: settings.gradle.kts
GFotosApp/app/: build.gradle.kts
GFotosApp/app/src/androidTest/java/com/example/gfotos/: ExampleInstrumentedTest.kt
GFotosApp/app/src/main/: AndroidManifest.xml
GFotosApp/app/src/main/java/com/example/gfotos/: Gallery.kt  InitialPage.kt  MainActivity.kt  Navigation.kt
GFotosApp/app/src/main/java/com/example/gfotos/ui/theme/: Color.kt  Theme.kt  Type.kt
GFotosApp/app/src/main/res/values/: strings.xml  themes.xml
GFotosApp/app/src/test/java/com/example/gfotos/: ExampleUnitTest.kt
GFotosApp/gradle/wrapper/: gradle-wrapper.properties
proxy_server/: Cargo.toml
proxy_server/src/: main.rs  server.rs  session.rs
