[package]
name = "proxy_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde_json = "1.0"
actix-cors = "0.6.5"
actix-web-actors = "4.3.0"
actix = "0.13.3"
futures-util = "0.3"
rand = "0.8.5"
log = "0.4.21"
actix-files = "0.6.5"

[dependencies.serde]
version = "1.0"
features = ["derive"]
